--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: CarfaxMx # Your GitHub organization or username, where this repository lives
+repo: status-page # The name of this repository
 
 sites:
   - name: ReporteCari
@@ -12,6 +12,8 @@ sites:
   - name: Reporte Car-Info
     url: https://reporte.car-info.com.mx
 
+assignees:
+  - CarfaxMx
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
